--- a/src/Assignment-5/MyStyleSheet.css
+++ b/src/Assignment-5/MyStyleSheet.css
@@ -1,4 +1,11 @@
 .table {
   height: 100px;
   width: 300px;
+  background-color: #E7E7E7;
+}
+
+.background{
+  background-size: 190px;
+  background-position: center;
+  background-repeat: no-repeat;
 }
