--- a/src/Assignment-5/MyStyleSheet.css
+++ b/src/Assignment-5/MyStyleSheet.css
@@ -2,9 +2,5 @@
   height: 100px;
   width: 300px;
   background-color: #e7e7e7;
-}
-
-.toggle {
-  height: "10px";
-  width:"10px";
+  margin-left: 50px;
 }
